add: styles needed for logic, fix: minor UI fixes

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -21,6 +21,11 @@
     &:focus {
         background-color: var(--clr-green-400);
     }
+
+    &[aria-checked=true] {
+        color: var(--clr-green-900);
+        background-color: var(--clr-green-400)
+    }
 }
 
 .reset-btn {
