--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -3,7 +3,7 @@
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
     gap: var(--space-500);
     padding-block-start: var(--space-600);
@@ -13,7 +13,7 @@ body {
     }
 
     @include respond(xl) {
-        padding: 0;
+        padding-block-start: var(--space-1600);
     }
 }
 
