refactor: move processInputs, change: image path

--- a/sass/components/_calculator.scss
+++ b/sass/components/_calculator.scss
@@ -41,11 +41,11 @@
         }
 
         &.bill-field {
-            background-image: url("../../images/icon-dollar.svg");
+            background-image: url("/images/icon-dollar.svg");
         }
         
         &.pax-field {
-            background-image: url("../../images/icon-person.svg");
+            background-image: url("/images/icon-person.svg");
         }
         
         &.custom-field {
