Remove: invalid aria attribute, Fix: calculator position

--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ fieldset {
 body {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: var(--space-500);
   padding-block-start: var(--space-600);
@@ -182,7 +183,7 @@ body {
 }
 @media (min-width: 90em) {
   body {
-    padding-block-start: var(--space-1600);
+    padding: 0;
   }
 }
 
