--- a/sass/components/_calculator.scss
+++ b/sass/components/_calculator.scss
@@ -34,6 +34,15 @@
 
         &.custom-field {
             margin: 0;
+            text-align: center;
+
+            &--selected {
+                border: 2px solid var(--clr-green-400);
+            }
+
+            &--error {
+                border: 2px solid var(--clr-orange-400);
+            }
         }
 
         &::placeholder {
@@ -46,10 +55,6 @@
         
         &.pax-field {
             background-image: url("../images/icon-person.svg");
-        }
-        
-        &.custom-field {
-            text-align: center;
         }
 
         &--error {
